tests/baselines/reference/genericCloduleInModule2.errors.txt
genericCloduleInModule2.ts(14,8): error TS2314: Generic type 'B<T>' requires 1 type argument(s).


==== genericCloduleInModule2.ts (1 errors) ====
    namespace A {
        export class B<T> {
            foo() { }
            static bar() { }
        }
    }
    
    namespace A {
        export namespace B {
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2314: Generic type 'B<T>' requires 1 type argument(s).
    b.foo();